[project]
name = "sam-road"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "addict>=2.4.0",
    "gdown>=5.2.0",
    "igraph>=0.11.8",
    "imageio>=2.35.1",
    "jupyter>=1.1.1",
    "lightning>=2.3.3",
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "rtree>=1.3.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "segment-anything",
    "shapely>=2.0.7",
    "tcod>=16.2.3",
    "torch>=2.5.1",
    "torchmetrics>=1.5.2",
    "torchvision>=0.20.1",
    "wandb>=0.19.6",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
